# typed-datasets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/typed_datasets/: __init__.py
tests/: test_typed_datasets.py
