[project]
name = "typed-datasets"
version = "0.1.0"
description = "A well-typed wrapper around Hugging Face datasets."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Koby Lewis", email = "kobyjlewis@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "datasets>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Plyb/typed-datasets"
Issues = "https://github.com/Plyb/typed-datasets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typed_datasets"]

[tool.hatch.build.targets.sdist]
include = ["src/typed_datasets", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
